<resources>
    <string name="app_name">d308</string>
    <string name="excursion_title">Excursion Title</string>
    <string name="excursion_date">Excursion Date</string>
    <string name="save_excursion">Save Excursion</string>
    <string name="delete_excursion">Delete Excursion</string>
    <string name="set_excursion_alert">Set Excursion Alert</string>
    <string name="excursion_details">Excursion Details</string>
    <string name="excursions">Excursions</string>
    <string name="add_excursion">Add Excursion</string>
    <string name="vacation_planner">Vacation Planner</string>
    <string name="plan_and_manage_your_trips">Plan and manage your trips</string>
    <string name="view_vacations">View Vacations</string>
    <string name="vacation_details">Vacation Details</string>
    <string name="vacations">Vacations</string>
    <string name="add_vacation">Add Vacation</string>
    <string name="test_button">Test Button</string>
    <string name="hotel">Hotel</string>
    <string name="vacation_title">Vacation Title</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="view_excursions">View Excursions</string>
    <string name="share_vacation">Share Vacation</string>
    <string name="set_start_alert">Set Start Alert</string>
    <string name="set_end_alert">Set End Alert</string>
</resources>